[package]
name = "seL4_typegen"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1"
pest_derive = "2.0"
quote = "1.0"
syn = { version =  "=1.0.40" ,  features = ["full"]}
proc-macro-error = "^1"
proc-macro2 = "^1"